bynkc/tests/fixtures/negative/482_messages_missing_locale_dependency/src/bundle.bynk
commons bundle

messages "en" @reference {
  "a" => "b"
}
